Fix header buttons and main text alignment

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -17,12 +17,12 @@ body {
 
 .header{
   font-size: 20px;
-  font-weight:bold ;
+  font-weight:bold;
+  margin-bottom: 5px;
 }
 
 .container{
   display: flex;
-  align-items: center;
   gap: 15px;
 }
 
@@ -50,6 +50,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
